Numerical Values of a 3x3 filters are added
Numerical Values of a 3x3 filters are added in Convolution

--- a/CNN Layers Visualization/Vis 1 Mosque CNN Layers Visualization .ipynb
+++ b/CNN Layers Visualization/Vis 1 Mosque CNN Layers Visualization .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -103,22 +103,22 @@
     {
      "data": {
       "text/plain": [
-       "[<tensorflow.python.keras.layers.convolutional.Conv2D at 0x2a7ff3ade80>,\n",
-       " <tensorflow.python.keras.layers.pooling.MaxPooling2D at 0x2a7ff3dd340>,\n",
-       " <tensorflow.python.keras.layers.convolutional.Conv2D at 0x2a7ff3dd3d0>,\n",
-       " <tensorflow.python.keras.layers.pooling.MaxPooling2D at 0x2a7ff44e7f0>,\n",
-       " <tensorflow.python.keras.layers.convolutional.Conv2D at 0x2a7ff459b50>,\n",
-       " <tensorflow.python.keras.layers.pooling.MaxPooling2D at 0x2a7ff3c0d60>,\n",
-       " <tensorflow.python.keras.layers.convolutional.Conv2D at 0x2a7ff45fee0>,\n",
-       " <tensorflow.python.keras.layers.pooling.MaxPooling2D at 0x2a7ff466b80>,\n",
-       " <tensorflow.python.keras.layers.core.Dropout at 0x2a7ff46d910>,\n",
-       " <tensorflow.python.keras.layers.core.Flatten at 0x2a7ff46da60>,\n",
-       " <tensorflow.python.keras.layers.core.Dense at 0x2a7ff4b9430>,\n",
-       " <tensorflow.python.keras.layers.core.Dropout at 0x2a7ff3dd3a0>,\n",
-       " <tensorflow.python.keras.layers.core.Dense at 0x2a7ff4d8b50>]"
+       "[<tensorflow.python.keras.layers.convolutional.Conv2D at 0x2964cbf3eb0>,\n",
+       " <tensorflow.python.keras.layers.pooling.MaxPooling2D at 0x2964cc06af0>,\n",
+       " <tensorflow.python.keras.layers.convolutional.Conv2D at 0x2964cc06b80>,\n",
+       " <tensorflow.python.keras.layers.pooling.MaxPooling2D at 0x2964cc06b50>,\n",
+       " <tensorflow.python.keras.layers.convolutional.Conv2D at 0x2964dc52a90>,\n",
+       " <tensorflow.python.keras.layers.pooling.MaxPooling2D at 0x2964dc5bb80>,\n",
+       " <tensorflow.python.keras.layers.convolutional.Conv2D at 0x2964dc67c40>,\n",
+       " <tensorflow.python.keras.layers.pooling.MaxPooling2D at 0x2964dc73dc0>,\n",
+       " <tensorflow.python.keras.layers.core.Dropout at 0x2964cc06550>,\n",
+       " <tensorflow.python.keras.layers.core.Flatten at 0x2964dc79220>,\n",
+       " <tensorflow.python.keras.layers.core.Dense at 0x2964dc79f70>,\n",
+       " <tensorflow.python.keras.layers.core.Dropout at 0x2964dcd98b0>,\n",
+       " <tensorflow.python.keras.layers.core.Dense at 0x2964dcd9820>]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {
     "scrolled": false
    },
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -271,22 +271,22 @@
     {
      "data": {
       "text/plain": [
-       "[<tensorflow.python.keras.layers.convolutional.Conv2D at 0x2a7ff3ade80>,\n",
-       " <tensorflow.python.keras.layers.pooling.MaxPooling2D at 0x2a7ff3dd340>,\n",
-       " <tensorflow.python.keras.layers.convolutional.Conv2D at 0x2a7ff3dd3d0>,\n",
-       " <tensorflow.python.keras.layers.pooling.MaxPooling2D at 0x2a7ff44e7f0>,\n",
-       " <tensorflow.python.keras.layers.convolutional.Conv2D at 0x2a7ff459b50>,\n",
-       " <tensorflow.python.keras.layers.pooling.MaxPooling2D at 0x2a7ff3c0d60>,\n",
-       " <tensorflow.python.keras.layers.convolutional.Conv2D at 0x2a7ff45fee0>,\n",
-       " <tensorflow.python.keras.layers.pooling.MaxPooling2D at 0x2a7ff466b80>,\n",
-       " <tensorflow.python.keras.layers.core.Dropout at 0x2a7ff46d910>,\n",
-       " <tensorflow.python.keras.layers.core.Flatten at 0x2a7ff46da60>,\n",
-       " <tensorflow.python.keras.layers.core.Dense at 0x2a7ff4b9430>,\n",
-       " <tensorflow.python.keras.layers.core.Dropout at 0x2a7ff3dd3a0>,\n",
-       " <tensorflow.python.keras.layers.core.Dense at 0x2a7ff4d8b50>]"
+       "[<tensorflow.python.keras.layers.convolutional.Conv2D at 0x2964cbf3eb0>,\n",
+       " <tensorflow.python.keras.layers.pooling.MaxPooling2D at 0x2964cc06af0>,\n",
+       " <tensorflow.python.keras.layers.convolutional.Conv2D at 0x2964cc06b80>,\n",
+       " <tensorflow.python.keras.layers.pooling.MaxPooling2D at 0x2964cc06b50>,\n",
+       " <tensorflow.python.keras.layers.convolutional.Conv2D at 0x2964dc52a90>,\n",
+       " <tensorflow.python.keras.layers.pooling.MaxPooling2D at 0x2964dc5bb80>,\n",
+       " <tensorflow.python.keras.layers.convolutional.Conv2D at 0x2964dc67c40>,\n",
+       " <tensorflow.python.keras.layers.pooling.MaxPooling2D at 0x2964dc73dc0>,\n",
+       " <tensorflow.python.keras.layers.core.Dropout at 0x2964cc06550>,\n",
+       " <tensorflow.python.keras.layers.core.Flatten at 0x2964dc79220>,\n",
+       " <tensorflow.python.keras.layers.core.Dense at 0x2964dc79f70>,\n",
+       " <tensorflow.python.keras.layers.core.Dropout at 0x2964dcd98b0>,\n",
+       " <tensorflow.python.keras.layers.core.Dense at 0x2964dcd9820>]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,8 +305,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -319,6 +321,207 @@
    "source": [
     "filters,biases=model.layers[0].get_weights()\n",
     "print(layer[0].name,filters.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Numerical Values of Filters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ 0.00216223, -0.12459189, -0.10175795],\n",
+       "        [ 0.00934245,  0.02112308,  0.11812723],\n",
+       "        [-0.10661351,  0.11080297,  0.02139206]],\n",
+       "\n",
+       "       [[-0.11236895,  0.07614908, -0.12249797],\n",
+       "        [ 0.10568455,  0.08818206,  0.09650642],\n",
+       "        [ 0.07870153, -0.08206056, -0.11502008]],\n",
+       "\n",
+       "       [[-0.11856175, -0.02798354, -0.00620362],\n",
+       "        [-0.01138094,  0.10308103, -0.10326934],\n",
+       "        [ 0.07912979,  0.04275456,  0.10122793]]], dtype=float32)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filters[:,:,:,0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[-0.08937831,  0.02189078,  0.00915092],\n",
+       "        [ 0.03254507,  0.13307509,  0.11670788],\n",
+       "        [-0.06133597, -0.09259015, -0.1105869 ]],\n",
+       "\n",
+       "       [[ 0.01818278,  0.1425009 , -0.05031147],\n",
+       "        [-0.08652505,  0.13480535, -0.1183577 ],\n",
+       "        [-0.06910532,  0.1312387 , -0.01032173]],\n",
+       "\n",
+       "       [[ 0.04531452,  0.06587377,  0.01525397],\n",
+       "        [-0.12460088, -0.02889853, -0.06868747],\n",
+       "        [ 0.10430609,  0.00346021, -0.08673795]]], dtype=float32)"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filters[:,:,:,1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Convolution Filter:  0 \n",
+      "\n",
+      "Filters :  0  RGB Channel:  0\n",
+      "[[ 0.00216223 -0.12459189 -0.10175795]\n",
+      " [ 0.00934245  0.02112308  0.11812723]\n",
+      " [-0.10661351  0.11080297  0.02139206]]\n",
+      "\n",
+      "\n",
+      "Filters :  0  RGB Channel:  1\n",
+      "[[-0.11236895  0.07614908 -0.12249797]\n",
+      " [ 0.10568455  0.08818206  0.09650642]\n",
+      " [ 0.07870153 -0.08206056 -0.11502008]]\n",
+      "\n",
+      "\n",
+      "Filters :  0  RGB Channel:  2\n",
+      "[[-0.11856175 -0.02798354 -0.00620362]\n",
+      " [-0.01138094  0.10308103 -0.10326934]\n",
+      " [ 0.07912979  0.04275456  0.10122793]]\n",
+      "\n",
+      "\n",
+      "-----------------------------------------------------\n",
+      "Convolution Filter:  1 \n",
+      "\n",
+      "Filters :  1  RGB Channel:  0\n",
+      "[[-0.08937831  0.02189078  0.00915092]\n",
+      " [ 0.03254507  0.13307509  0.11670788]\n",
+      " [-0.06133597 -0.09259015 -0.1105869 ]]\n",
+      "\n",
+      "\n",
+      "Filters :  1  RGB Channel:  1\n",
+      "[[ 0.01818278  0.1425009  -0.05031147]\n",
+      " [-0.08652505  0.13480535 -0.1183577 ]\n",
+      " [-0.06910532  0.1312387  -0.01032173]]\n",
+      "\n",
+      "\n",
+      "Filters :  1  RGB Channel:  2\n",
+      "[[ 0.04531452  0.06587377  0.01525397]\n",
+      " [-0.12460088 -0.02889853 -0.06868747]\n",
+      " [ 0.10430609  0.00346021 -0.08673795]]\n",
+      "\n",
+      "\n",
+      "-----------------------------------------------------\n",
+      "Convolution Filter:  2 \n",
+      "\n",
+      "Filters :  2  RGB Channel:  0\n",
+      "[[ 0.04770798  0.00263639  0.10004821]\n",
+      " [ 0.0594027   0.10927588 -0.13898104]\n",
+      " [-0.06937871  0.00797465 -0.11667494]]\n",
+      "\n",
+      "\n",
+      "Filters :  2  RGB Channel:  1\n",
+      "[[ 0.01465027 -0.03729146  0.07258949]\n",
+      " [ 0.08977793 -0.03550197  0.11847031]\n",
+      " [-0.05629079 -0.00541698  0.09654173]]\n",
+      "\n",
+      "\n",
+      "Filters :  2  RGB Channel:  2\n",
+      "[[-0.01250727  0.01173053  0.03752072]\n",
+      " [-0.10224492  0.10617792  0.08918573]\n",
+      " [-0.00275759 -0.01825935 -0.05526831]]\n",
+      "\n",
+      "\n",
+      "-----------------------------------------------------\n",
+      "Convolution Filter:  3 \n",
+      "\n",
+      "Filters :  3  RGB Channel:  0\n",
+      "[[ 0.08570956  0.00040519  0.11495275]\n",
+      " [-0.04262703 -0.10009789  0.05519476]\n",
+      " [ 0.06021731  0.11628556 -0.13722785]]\n",
+      "\n",
+      "\n",
+      "Filters :  3  RGB Channel:  1\n",
+      "[[-0.10398912 -0.09866638  0.04401505]\n",
+      " [-0.15428081 -0.07874447  0.06412745]\n",
+      " [ 0.02024288  0.01767433 -0.14575689]]\n",
+      "\n",
+      "\n",
+      "Filters :  3  RGB Channel:  2\n",
+      "[[ 0.06141269  0.11799917  0.0601937 ]\n",
+      " [-0.07407054  0.13004789  0.04319395]\n",
+      " [-0.01694796 -0.03094941  0.02807689]]\n",
+      "\n",
+      "\n",
+      "-----------------------------------------------------\n",
+      "Convolution Filter:  4 \n",
+      "\n",
+      "Filters :  4  RGB Channel:  0\n",
+      "[[-0.04513102 -0.02991658 -0.03948937]\n",
+      " [ 0.08845937 -0.05064379 -0.06262517]\n",
+      " [-0.04446737 -0.02081027  0.06950676]]\n",
+      "\n",
+      "\n",
+      "Filters :  4  RGB Channel:  1\n",
+      "[[ 0.06109602  0.03381514  0.08938386]\n",
+      " [-0.04522457 -0.03892133  0.07662794]\n",
+      " [-0.06938914 -0.00147754  0.09882403]]\n",
+      "\n",
+      "\n",
+      "Filters :  4  RGB Channel:  2\n",
+      "[[-0.03380658  0.01959957 -0.09115962]\n",
+      " [-0.0536279   0.07978135 -0.04455916]\n",
+      " [-0.07692974 -0.05913737  0.12777507]]\n",
+      "\n",
+      "\n",
+      "-----------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "for f in range(5):\n",
+    "    #print('3D Filter: '+str(f)+'\\n\\n',filters[:,:,:,f])\n",
+    "    print(\"Convolution Filter: \",f,'\\n')\n",
+    "    RGB=filters[:,:,:,f]\n",
+    "    for i,channel in enumerate(RGB):\n",
+    "        print('Filters : ',f,' RGB Channel: ',i)\n",
+    "        print(channel)\n",
+    "        print('\\n')\n",
+    "    print('-----------------------------------------------------')\n",
+    "        \n"
    ]
   },
   {
