--- a/Image Classification with CNN/2 Image_Classification_with_Sequential CNN .ipynb
+++ b/Image Classification with CNN/2 Image_Classification_with_Sequential CNN .ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -141,7 +141,7 @@
     "import matplotlib.pyplot as plt\n",
     "classnames = ['brick_house', 'mosque','mud_house', 'skyscraper', 'temple', 'tinshed']\n",
     "Numbers = [len(brick_house),len(mosque),len(temple),len(tinshed),len(skyscraper),len(mud_house)]\n",
-    "plt.bar(class_names,Numbers,)\n",
+    "plt.bar(classnames,Numbers,)\n",
     "plt.show()"
    ]
   },
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "id": "JNNf0-TaaOLx"
    },
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "id": "M9FGOMwn9zH6"
    },
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -749,7 +749,7 @@
     },
     "id": "b4LG7mytiNDR",
     "outputId": "43aaaf6b-d427-4ce5-b36a-b02134780c6a",
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1441,50 +1441,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "7c4_A0KdODcO",
-    "outputId": "436e509a-b11b-4e12-9121-93347e15782c"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.76      0.52      0.62        50\n",
-      "           1       0.74      0.70      0.72        50\n",
-      "           2       0.85      0.90      0.87        50\n",
-      "           3       0.94      0.94      0.94        50\n",
-      "           4       0.77      0.68      0.72        50\n",
-      "           5       0.67      0.96      0.79        50\n",
-      "\n",
-      "    accuracy                           0.78       300\n",
-      "   macro avg       0.79      0.78      0.78       300\n",
-      "weighted avg       0.79      0.78      0.78       300\n",
-      "\n",
-      "{'brick_house': 0, 'mosque': 1, 'mud_house': 2, 'skyscraper': 3, 'temple': 4, 'tinshed': 5}\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.metrics import classification_report\n",
-    "\n",
-    "test_pred_raw = model.predict(test_dataset)\n",
-    "test_labels = np.asarray(test_dataset.classes)\n",
-    "test_pred = np.argmax(test_pred_raw, axis=1)\n",
-    "\n",
-    "class_names = list(test_dataset.class_indices.keys())\n",
-    "print(classification_report(test_labels, test_pred))\n",
-    "print(test_dataset.class_indices)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "id": "F7AjGo_89zID"
@@ -1536,7 +1492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1545,7 +1501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {
     "id": "73E7uAAJ9zIE"
    },
@@ -1556,7 +1512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1613,13 +1569,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {
     "id": "Jg7ig--aLusu"
    },
    "outputs": [],
    "source": [
     "model=reload_model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pandas Dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df=pd.DataFrame(train_dataset)"
    ]
   },
   {
@@ -1646,7 +1627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {
     "id": "OQm3gPBdL2a3"
    },
@@ -1657,7 +1638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1706,7 +1687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1755,7 +1736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2332,7 +2313,8 @@
      "base_uri": "https://localhost:8080/"
     },
     "id": "yZMEZQn69zIG",
-    "outputId": "25cfb98d-99cd-478d-83dd-c2df127bf9ff"
+    "outputId": "25cfb98d-99cd-478d-83dd-c2df127bf9ff",
+    "scrolled": true
    },
    "outputs": [
     {
